fix: stretched out sidebar icons

--- a/src/assets/styles/doc-styles.scss
+++ b/src/assets/styles/doc-styles.scss
@@ -439,6 +439,7 @@ body {
     vertical-align: middle;
     display: inline-block;
     margin-right: 0.25em;
+    object-fit: contain;
   }
 }
 
